Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -163,7 +163,7 @@
         "CIsbivR4a9HU",
         "InPGru7oa9K7"
       ],
-      "authorship_tag": "ABX9TyO3ei+odqdfg83X2pKjfExG",
+      "authorship_tag": "ABX9TyMWOeEDNoeA6oojOMGnbyCx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -9280,86 +9280,61 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "T6CvoMoY9jji",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "a1a3ff9b-2af6-45e5-de77-da6d116cf4f6"
+        "id": "T6CvoMoY9jji"
       },
       "source": [
+        "### pypy3만 가능한가?, 시간초과 줄이려고 해도 힘들었음\n",
         "from collections import deque\n",
         "import sys\n",
         "input = sys.stdin.readline\n",
-        "def D(x):\n",
+        "def D(x): # D 때문에 bottom-up방식 불가\n",
         "    x *= 2\n",
         "    if x > 9999:\n",
         "        x %= 10000\n",
-        "    return x\n",
+        "        return x \n",
+        "    else:\n",
+        "        return x\n",
         "\n",
         "def S(x):\n",
-        "    x -= 1\n",
-        "    if x < 0:\n",
-        "        x = 9999\n",
+        "    if x == 0:\n",
+        "        return 9999\n",
+        "    else:\n",
+        "        x -= 1\n",
+        "        return x\n",
+        "\n",
+        "def L(x):\n",
+        "    x = (x%1000)*10 + (x//1000)\n",
         "    return x\n",
         "\n",
         "def R(x):\n",
-        "    x = str(x)\n",
-        "    x += '0'*(4-len(x)) + x[0]\n",
-        "    return int(x[-4:])\n",
-        "\n",
-        "def L(x):\n",
-        "    x = str(x)\n",
-        "    t = len(x)\n",
-        "    if  t < 4:\n",
-        "        return int(x + '0')\n",
-        "    else:\n",
-        "        return int(x[-3:] + x[0])\n",
+        "    x = (x%10)*1000 + (x //10)\n",
+        "    return x\n",
         "\n",
         "def main():\n",
-        "    a, b = map(int, input().rstrip('\\n').split())\n",
+        "    a, b = map(int, input().split())\n",
         "\n",
-        "    dp = [['',-1] for _ in range(10000)]\n",
+        "    dp = [False for _ in range(10000)]\n",
         "\n",
         "    queue = deque()\n",
-        "    queue.append(a)\n",
+        "    queue.append([a,''])\n",
         "\n",
         "    while queue:\n",
-        "        temp = queue.popleft()\n",
+        "        temp, res = queue.popleft()\n",
         "        if temp == b:\n",
-        "            result = ''            \n",
-        "            while True:\n",
-        "                if temp == a:\n",
-        "                    break\n",
-        "                result += dp[temp][0]\n",
-        "                temp = dp[temp][1]\n",
-        "            print(result)\n",
-        "            break\n",
+        "            print(res)\n",
+        "            return\n",
         "\n",
         "        for i,j in [[D(temp),'D'], [S(temp),'S'], [L(temp),'L'], [R(temp),'R']]:\n",
-        "            if dp[i][1] == -1:\n",
-        "                queue.append(i)\n",
-        "                dp[i] = [j, temp]\n",
+        "            if not dp[i]:\n",
+        "                dp[i] = True\n",
+        "                queue.append([i, res + j])\n",
         "\n",
         "if __name__ == '__main__':\n",
         "    for _ in range(int(input())):\n",
         "        main()"
       ],
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "3\n",
-            "1234 3412\n",
-            "LL\n",
-            "1000 1\n",
-            "L\n",
-            "1 16\n",
-            "DDDD\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -11457,26 +11432,94 @@
         "    main()"
       ],
       "metadata": {
-        "id": "5LDqG3JMtAC2",
+        "id": "5LDqG3JMtAC2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### 1271번"
+      ],
+      "metadata": {
+        "id": "2tJtkLAztAHb"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import sys\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "    a, b = map(int, input().split())\n",
+        "    t = a // b\n",
+        "    print(t)\n",
+        "    print(a - t*b)\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    main()"
+      ],
+      "metadata": {
+        "id": "KKLplfqGtAHb"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### 1024번(***)"
+      ],
+      "metadata": {
+        "id": "foaHOJVEUBDm"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# https://pacific-ocean.tistory.com/104\n",
+        "import sys\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "    n, l = map(int, input().split())\n",
+        "    t = 0\n",
+        "    x = -1\n",
+        "    iter = 0\n",
+        "\n",
+        "    for i in range(l, 101):\n",
+        "        t = (i * i - i) / 2\n",
+        "        if (n - t) % i == 0 and (n - t) // i >= 0:\n",
+        "            x = (n - t) // i\n",
+        "            iter = i\n",
+        "            break\n",
+        "\n",
+        "    if x == -1:\n",
+        "        print(-1)\n",
+        "    else:\n",
+        "        for i in range(iter):\n",
+        "            print(int(x + i))\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    main()"
+      ],
+      "metadata": {
+        "id": "MGw955jeUBDp",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fb1e7fa6-fd7a-48ad-dea4-98e49f0ffdcb"
+        "outputId": "4f9c776d-3bc3-4b40-ed3b-e5f3b58e7337"
       },
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "4 4\n",
-            "..X.\n",
-            "..X.\n",
-            "..X.\n",
-            "..X.\n",
-            "[False, False, False, False]\n",
-            "[True, True, False, True]\n",
-            "3\n"
+            "18 2\n",
+            "5 6 7 "
           ]
         }
       ]
@@ -11487,38 +11530,33 @@
         "####"
       ],
       "metadata": {
-        "id": "2tJtkLAztAHb"
+        "id": "nvyv1g8XQU4w"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "..X.\n",
-        "..X.\n",
-        "..X.\n",
-        "..X.\n",
-        "\n",
-        "....XXXX\n",
-        "........\n",
-        "XX.X.XX.\n",
-        "........\n",
-        "........"
+        "result = [[0,1,2],[2,3,2],[4,2,1]]\n",
+        "sorted(result, key=lambda x : [x[2], x[1]])"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "vih2Cnc39ZJ_",
-        "outputId": "b3d8119c-e8e5-48b9-d1c5-e1d7b93e4882"
+        "id": "Zjc_dnnEXJiT",
+        "outputId": "e5cb9b03-a62d-4a21-8dd0-68304a76b93d"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "....\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[[4, 2, 1], [0, 1, 2], [2, 3, 2]]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
         }
       ]
     },
@@ -11534,7 +11572,33 @@
         "    main()"
       ],
       "metadata": {
-        "id": "KKLplfqGtAHb"
+        "id": "KXqKHyqXQU4w"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####"
+      ],
+      "metadata": {
+        "id": "Q_Mt6QbqQVLs"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import sys\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    main()"
+      ],
+      "metadata": {
+        "id": "Oo6gpAD9QVLs"
       },
       "execution_count": null,
       "outputs": []
