Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -163,7 +163,7 @@
         "CIsbivR4a9HU",
         "InPGru7oa9K7"
       ],
-      "authorship_tag": "ABX9TyMWOeEDNoeA6oojOMGnbyCx",
+      "authorship_tag": "ABX9TyOF/X5FLmPQdpjaMhMPPbk4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -11479,7 +11479,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# https://pacific-ocean.tistory.com/104\n",
+        "### https://pacific-ocean.tistory.com/104\n",
+        "### 식 풀이를 했어야 했음.\n",
         "import sys\n",
         "input = sys.stdin.readline\n",
         "\n",
@@ -11512,7 +11513,7 @@
         },
         "outputId": "4f9c776d-3bc3-4b40-ed3b-e5f3b58e7337"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -11527,7 +11528,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "####"
+        "#### 1026번"
       ],
       "metadata": {
         "id": "nvyv1g8XQU4w"
@@ -11536,37 +11537,22 @@
     {
       "cell_type": "code",
       "source": [
-        "result = [[0,1,2],[2,3,2],[4,2,1]]\n",
-        "sorted(result, key=lambda x : [x[2], x[1]])"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Zjc_dnnEXJiT",
-        "outputId": "e5cb9b03-a62d-4a21-8dd0-68304a76b93d"
-      },
-      "execution_count": 25,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[[4, 2, 1], [0, 1, 2], [2, 3, 2]]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 25
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "import sys\n",
         "input = sys.stdin.readline\n",
         "\n",
         "def main():\n",
+        "    n = int(input())\n",
+        "    A = list(map(int, input().split()))\n",
+        "    B = list(map(int, input().split()))\n",
+        "\n",
+        "    A.sort()\n",
+        "    B.sort(reverse=True)\n",
+        "\n",
+        "    res = 0\n",
+        "    for i in range(n):\n",
+        "        res += A[i] * B[i]\n",
+        "    \n",
+        "    print(res)\n",
         "\n",
         "if __name__ == '__main__':\n",
         "    main()"
