Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -163,7 +163,7 @@
         "CIsbivR4a9HU",
         "InPGru7oa9K7"
       ],
-      "authorship_tag": "ABX9TyOF/X5FLmPQdpjaMhMPPbk4",
+      "authorship_tag": "ABX9TyOpmiOoAnZjfhNTheopynp4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -11566,10 +11566,72 @@
     {
       "cell_type": "markdown",
       "source": [
-        "####"
+        "#### 1049번"
       ],
       "metadata": {
         "id": "Q_Mt6QbqQVLs"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import sys\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "    n, m = map(int, input().split())\n",
+        "    \n",
+        "    pakages, each = [], []\n",
+        "    for _ in range(m):\n",
+        "        x, y = map(int, input().split())\n",
+        "        pakages.append(x)\n",
+        "        each.append(y)\n",
+        "    \n",
+        "    pakages.sort()\n",
+        "    each.sort()\n",
+        "\n",
+        "    res = 0\n",
+        "    while n > 0:\n",
+        "        if n // 6 > 0:\n",
+        "            # 낱개로 6개사는게 싼경우\n",
+        "            if pakages[0] > each[0] * 6:\n",
+        "                res += (each[0] * 6) * (n // 6)               \n",
+        "\n",
+        "            # 패키지로 6개사는게 싼경우\n",
+        "            else:\n",
+        "                res += pakages[0] * (n // 6)\n",
+        "\n",
+        "            n %= 6\n",
+        "        else:\n",
+        "            # 낱개로 나머지를 사는경우가 더 싼경우\n",
+        "            if pakages[0] > each[0] * n:\n",
+        "                res += each[0] * n\n",
+        "\n",
+        "            # 패키지를 하나 더사는 경우가 더 싼경우\n",
+        "            else:\n",
+        "                res += pakages[0]\n",
+        "            \n",
+        "            n = 0\n",
+        "    \n",
+        "    print(res)\n",
+        "\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    main()"
+      ],
+      "metadata": {
+        "id": "Oo6gpAD9QVLs"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####"
+      ],
+      "metadata": {
+        "id": "CWT4iS2ert0S"
       }
     },
     {
@@ -11584,7 +11646,7 @@
         "    main()"
       ],
       "metadata": {
-        "id": "Oo6gpAD9QVLs"
+        "id": "UmgmWEYKrt0T"
       },
       "execution_count": null,
       "outputs": []
