--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -163,7 +163,7 @@
         "CIsbivR4a9HU",
         "InPGru7oa9K7"
       ],
-      "authorship_tag": "ABX9TyOpmiOoAnZjfhNTheopynp4",
+      "authorship_tag": "ABX9TyOoikXDTZfUNquaMfrSPpxu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -11628,10 +11628,62 @@
     {
       "cell_type": "markdown",
       "source": [
-        "####"
+        "#### 1051번"
       ],
       "metadata": {
         "id": "CWT4iS2ert0S"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import sys\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def square(i,j,x,t):\n",
+        "    global s, res\n",
+        "    for k in range(1,t+1):\n",
+        "        if x != s[i+k][j]:\n",
+        "            continue\n",
+        "\n",
+        "        if x != s[i][j+k]:\n",
+        "            continue\n",
+        "        if x != s[i+k][j+k]:\n",
+        "            continue\n",
+        "        \n",
+        "        if res < (k+1) ** 2:\n",
+        "            res = (k+1) ** 2\n",
+        "\n",
+        "def main():\n",
+        "    global s, res\n",
+        "\n",
+        "    n, m = map(int, input().split())\n",
+        "    s = []\n",
+        "    for _ in range(n):\n",
+        "        s.append(input().rstrip('\\n'))\n",
+        "\n",
+        "    res = 1\n",
+        "    for i in range(n):\n",
+        "        for j in range(m):\n",
+        "            square(i,j,s[i][j], min(n-i-1, m-j-1))\n",
+        "    print(res)\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    main()"
+      ],
+      "metadata": {
+        "id": "UmgmWEYKrt0T"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####"
+      ],
+      "metadata": {
+        "id": "jyPXRy8ZyCvz"
       }
     },
     {
@@ -11646,7 +11698,7 @@
         "    main()"
       ],
       "metadata": {
-        "id": "UmgmWEYKrt0T"
+        "id": "5tXuaU31yCv0"
       },
       "execution_count": null,
       "outputs": []
