--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -163,7 +163,7 @@
         "CIsbivR4a9HU",
         "InPGru7oa9K7"
       ],
-      "authorship_tag": "ABX9TyOoikXDTZfUNquaMfrSPpxu",
+      "authorship_tag": "ABX9TyMvHuBMyamE3mhVVUFYOJot",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -11680,10 +11680,61 @@
     {
       "cell_type": "markdown",
       "source": [
-        "####"
+        "#### 1052번"
       ],
       "metadata": {
         "id": "jyPXRy8ZyCvz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import sys\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "    n, k = map(int, input().split()) # n개의 물병, k개의 이동\n",
+        "\n",
+        "    n = str(bin(n))[2:]\n",
+        "\n",
+        "    cnt = 0\n",
+        "    result = 0\n",
+        "    res_bit = ''\n",
+        "\n",
+        "    for i in n:\n",
+        "        if cnt < k:\n",
+        "            if i == '1':\n",
+        "                cnt += 1\n",
+        "        else:\n",
+        "            res_bit += i\n",
+        "\n",
+        "    if res_bit == '' or '1' not in res_bit:\n",
+        "        print(0)\n",
+        "        return\n",
+        "\n",
+        "    res_bit = res_bit[::-1]\n",
+        "    for i in range(len(res_bit)):\n",
+        "        if res_bit[i] == '0':\n",
+        "            result += 2 ** i\n",
+        "\n",
+        "    print(result + 1)\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    main()"
+      ],
+      "metadata": {
+        "id": "5tXuaU31yCv0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####"
+      ],
+      "metadata": {
+        "id": "ALUnbbrdfgjl"
       }
     },
     {
@@ -11698,7 +11749,7 @@
         "    main()"
       ],
       "metadata": {
-        "id": "5tXuaU31yCv0"
+        "id": "Sedm0HVzfgjm"
       },
       "execution_count": null,
       "outputs": []
