Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -163,7 +163,7 @@
         "CIsbivR4a9HU",
         "InPGru7oa9K7"
       ],
-      "authorship_tag": "ABX9TyMvHuBMyamE3mhVVUFYOJot",
+      "authorship_tag": "ABX9TyPLk17g5CLQwbIU3pYIFwBf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -8231,7 +8231,7 @@
         "id": "z02YtuKLBZ4I"
       },
       "source": [
-        "### 단계 : 최단경로==========="
+        "### 25단계 : 최단경로==========="
       ]
     },
     {
@@ -8240,7 +8240,7 @@
         "id": "OgYoF6xMBZ4I"
       },
       "source": [
-        "####  1753번"
+        "####  1753번 : 다익스트라"
       ]
     },
     {
@@ -8647,7 +8647,7 @@
         "id": "_YraW6oaPx0y"
       },
       "source": [
-        "### 단계 : ===========**"
+        "### 26단계 : 투 포인터===========**"
       ]
     },
     {
@@ -8913,7 +8913,7 @@
         "id": "eWsnwFm3PyO6"
       },
       "source": [
-        "### 단계 : 동적 계획법과 최단거리 역추적==========="
+        "### 27단계 : 동적 계획법과 최단거리 역추적==========="
       ]
     },
     {
@@ -9342,7 +9342,7 @@
         "id": "WelvvVZ_lfwo"
       },
       "source": [
-        "#### "
+        "####  11779번"
       ]
     },
     {
@@ -9351,7 +9351,45 @@
         "id": "CXwKQ3Zvlfwp"
       },
       "source": [
-        ""
+        "import sys\n",
+        "import heapq\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "    n = int(input())\n",
+        "    m = int(input())\n",
+        "    s = [[] for _ in range(n + 1)]\n",
+        "\n",
+        "    res = [[float('inf'), []] for _ in range(n+1)]\n",
+        "    \n",
+        "    for _ in range(m):\n",
+        "        a, b, c= map(int, input().split())\n",
+        "        s[a].append([b, c])\n",
+        "    \n",
+        "    start_point, end_point = map(int, input().split())\n",
+        "    res[start_point][0] = 0\n",
+        "    res[start_point][1] = [start_point]\n",
+        "    q = []\n",
+        "    heapq.heappush(q, (0, start_point))\n",
+        "    while q:        \n",
+        "        dist, now = heapq.heappop(q)\n",
+        "\n",
+        "        if res[now][0] < dist:\n",
+        "            continue\n",
+        "\n",
+        "        for i in s[now]:\n",
+        "            \n",
+        "            w = dist + i[1]\n",
+        "            if w < res[i[0]][0]:\n",
+        "                res[i[0]][0] = w\n",
+        "                res[i[0]][1] = res[now][1] + [i[0]]\n",
+        "                heapq.heappush(q, (w, i[0]))\n",
+        "    print(res[end_point][0])\n",
+        "    print(len(res[end_point][1]))\n",
+        "    print(*res[end_point][1])\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    main()"
       ],
       "execution_count": null,
       "outputs": []
@@ -11708,7 +11746,7 @@
         "        else:\n",
         "            res_bit += i\n",
         "\n",
-        "    if res_bit == '' or '1' not in res_bit:\n",
+        "    if res_bit == '' or '1' not in res_bit: # (8 1)의 반례 때문에 조금 해맸음\n",
         "        print(0)\n",
         "        return\n",
         "\n",
