Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -163,7 +163,7 @@
         "CIsbivR4a9HU",
         "InPGru7oa9K7"
       ],
-      "authorship_tag": "ABX9TyPLk17g5CLQwbIU3pYIFwBf",
+      "authorship_tag": "ABX9TyPYSaHDsSYLNQH4+GJWT5ah",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -8419,7 +8419,7 @@
         "id": "giug622TP235"
       },
       "source": [
-        "####  (***)11657번"
+        "####  (***)11657번 : 벨만포드만"
       ]
     },
     {
@@ -8474,7 +8474,7 @@
         "id": "i_oKdACOP26K"
       },
       "source": [
-        "####  11404번"
+        "####  11404번 : 플로이드 와샬"
       ]
     },
     {
@@ -9400,7 +9400,7 @@
         "id": "KkYaz69Slf0a"
       },
       "source": [
-        "#### "
+        "####  11780번"
       ]
     },
     {
@@ -9409,7 +9409,60 @@
         "id": "KXUAxKZZlf0b"
       },
       "source": [
-        ""
+        "import sys\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "    n = int(input())\n",
+        "    m = int(input())\n",
+        "\n",
+        "    max_val = int(1e9)\n",
+        "    s = [[[max_val, []] for _ in range(n)] for _ in range(n)]\n",
+        "    for _ in range(m):\n",
+        "        a, b, c= map(int, input().split())\n",
+        "        a -= 1\n",
+        "        b -= 1\n",
+        "\n",
+        "        if c < s[a][b][0]:\n",
+        "            s[a][b][0] = c\n",
+        "            s[a][b][1] = [a + 1]\n",
+        "\n",
+        "    for i in range(n):\n",
+        "        s[i][i][0] = 0\n",
+        "\n",
+        "    dp = [s for _ in range(n)]\n",
+        "\n",
+        "    for k in range(n): # k차원이지만 dp 변형 가능.\n",
+        "        for i in range(n):\n",
+        "            for j in range(n):\n",
+        "                prev = dp[k-1][i][j]\n",
+        "                new_1 = dp[k-1][i][k]\n",
+        "                new_2 = dp[k-1][k][j]\n",
+        "\n",
+        "                if new_1[0] + new_2[0] < prev[0]:\n",
+        "                    dp[k][i][j] = [new_1[0] + new_2[0], new_1[1] + new_2[1]]    \n",
+        "                else:\n",
+        "                    dp[k][i][j] = prev                    \n",
+        "\n",
+        "    for i in dp[-1]:\n",
+        "        for j in i:\n",
+        "            print(j[0] if j[0] < int(1e9) else 0, end=' ')\n",
+        "        print()\n",
+        "    \n",
+        "    for i in range(n):\n",
+        "        for j in range(n):\n",
+        "            res = dp[-1][i][j][1]\n",
+        "            if res == []:\n",
+        "                print(0)\n",
+        "                continue\n",
+        "            else:\n",
+        "                print(len(res)+1, end=' ')\n",
+        "                for k in res:\n",
+        "                    print(k, end=' ')\n",
+        "                print(j + 1)\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    main()"
       ],
       "execution_count": null,
       "outputs": []
