Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -163,7 +163,7 @@
         "CIsbivR4a9HU",
         "InPGru7oa9K7"
       ],
-      "authorship_tag": "ABX9TyPYSaHDsSYLNQH4+GJWT5ah",
+      "authorship_tag": "ABX9TyNJVtDc/0s9TPnmpLPbD6dw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -9482,13 +9482,117 @@
         "id": "fbBBHDCubUUH"
       },
       "source": [
-        "#### "
+        "####  11725번"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "r9eM5pvvbUUH"
+      },
+      "source": [
+        "import sys\n",
+        "sys.setrecursionlimit(int(1e9))\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def dfs(x):\n",
+        "    global res, visited_res, s\n",
+        "\n",
+        "    for i in s[x]:\n",
+        "        if visited_res[i]:\n",
+        "            continue\n",
+        "        res[i] = x\n",
+        "        visited_res[i] = True\n",
+        "        dfs(i)\n",
+        "\n",
+        "def main():\n",
+        "    global res, visited_res, s\n",
+        "    n = int(input())\n",
+        "    s = [[] for _ in range(n+1)]\n",
+        "    for _ in range(n-1):\n",
+        "        a, b = map(int, input().split())\n",
+        "        s[a].append(b)\n",
+        "        s[b].append(a)\n",
+        "    \n",
+        "    res = [False] * (n+1)\n",
+        "    visited_res = [False] * (n+1)\n",
+        "\n",
+        "    dfs(1)\n",
+        "\n",
+        "    for i in res[2:]:\n",
+        "        print(i)\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    main()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bGgOmPB9dgCq"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mljqBQSFdgCr"
+      },
+      "source": [
+        "import sys\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    main()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vN07MjatdgGk"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Nsfw_vZvdgGk"
+      },
+      "source": [
+        "import sys\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    main()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qBCHbut_dgJq"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pnq6o0PWdgJq"
       },
       "source": [
         ""
