Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -10,6 +10,10 @@
         "4KG0dQ5_J5k_",
         "MFvDSJ8eJ5oh",
         "5PRfloDZHGiN",
+        "RJEPK4fAmy0g",
+        "OO5wyMwim069",
+        "geO9_B3Nxcv-",
+        "z4u_ewTjxc6g",
         "hd-9cFVbd81N",
         "Cdc6oGAHJ5wv",
         "jnw0s22-J5zm",
@@ -32,8 +36,12 @@
         "ZZX1EwaLOoXw",
         "uwtGS2Q4Ooaz",
         "L2bGuKUUOoeb",
+        "wBFPqXNuR8ne",
+        "JjxDErpjR8ne",
         "AZNtoqizpQ2e",
         "u-5xqnR1pRSf",
+        "mKjNyy4epRXc",
+        "bTQh46KspRbf",
         "gZGgBEu5pRfc",
         "6twKfAmqpRnI",
         "ZDuE1-OipRq_",
@@ -49,6 +57,7 @@
         "L3mEbN4iMdEM",
         "fGK6XiQ4MdHJ",
         "3LicNHImMdKU",
+        "9zMkFXkfMdOm",
         "NTQ_ay5yTJtQ",
         "Rv4kaoPHTJtR",
         "_GihlXpZv_jE",
@@ -127,7 +136,6 @@
         "Xc2rVYZ1DWAq",
         "_jfJBLzSDWEK",
         "oPD8cNOfDWHz",
-        "YmNhCb79bUUH",
         "WzwUHBI4pjsC",
         "n-jLje1Epjv5",
         "kg3C85P2pkCh",
@@ -163,7 +171,7 @@
         "CIsbivR4a9HU",
         "InPGru7oa9K7"
       ],
-      "authorship_tag": "ABX9TyNJVtDc/0s9TPnmpLPbD6dw",
+      "authorship_tag": "ABX9TyPFu9pvFU98GdBNPx56opf5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -372,7 +380,7 @@
       "source": [
         "def main():\n",
         "    t = input()\n",
-        "    print(t + '??!')\n",
+        "    print(t + '??!')        # 뒤에 필요 문자 추가하여 출력\n",
         "\n",
         "if __name__ == '__main__':\n",
         "    main()"
@@ -397,8 +405,8 @@
       "source": [
         "import sys\n",
         "def main():\n",
-        "    t = int(sys.stdin.readline())\n",
-        "    print(t - 543)\n",
+        "    t = int(sys.stdin.readline())   # 입력 받은 값 정수로 치환\n",
+        "    print(t - 543)                  # 입력 받은 값 - 543 출력\n",
         "\n",
         "if __name__ == '__main__':\n",
         "    main()"
@@ -423,20 +431,21 @@
       "source": [
         "import sys\n",
         "input = sys.stdin.readline\n",
-        "def main():\n",
-        "    a, b = map(int, input().split())\n",
-        "    c = int(input())\n",
         "\n",
-        "    if b + c >= 60:\n",
-        "        a += (b+c)//60\n",
-        "        b =(b+c)%60\n",
-        "    else:\n",
-        "        b += c\n",
+        "def main():\n",
+        "    a, b = map(int, input().split()) # 기존 시간\n",
+        "    c = int(input())    # 추가 시간\n",
+        "\n",
+        "    if b + c >= 60:     # 분 단위가 60이 넘어가면\n",
+        "        a += (b+c)//60  # 분 단위 시간으로 치환 후 더함\n",
+        "        b =(b+c)%60     # 남은 분 단위\n",
+        "    else:               # 60보다 아래면\n",
+        "        b += c          # 추가 시간 더함\n",
         "        \n",
-        "    if a > 23:\n",
-        "        a %= 24\n",
+        "    if a > 23:          # 시간 단위 치환\n",
+        "        a %= 24         # 24로 나눈 나머지\n",
         "        \n",
-        "    print(a, b)\n",
+        "    print(a, b)         # 시간, 분 출력\n",
         "\n",
         "if __name__ == '__main__':\n",
         "    main()"
@@ -461,18 +470,21 @@
       "source": [
         "import sys\n",
         "input = sys.stdin.readline\n",
-        "def main():n\n",
-        "    t = list(map(int, input().split()))\n",
-        "    setted_t = list(set(t))\n",
         "\n",
-        "    if len(setted_t) == 1:\n",
-        "        print(10000 + t[0]*1000)\n",
-        "    elif len(setted_t) == 2:\n",
-        "        for i in setted_t:\n",
-        "            t.remove(i)b\n",
-        "        print(1000+t[0]*100)8\n",
-        "    else:\n",
-        "        print(max(t)*100)\n",
+        "def main():\n",
+        "    t = list(map(int, input().split())) # 3개의 눈 리스트 입력\n",
+        "    setted_t = list(set(t))         # 중복 값 제거\n",
+        "\n",
+        "    if len(setted_t) == 1:          # 3개가 모두 같은 숫자면\n",
+        "        print(10000 + t[0]*1000)    # 해당 숫자 * 1000 + 10000\n",
+        "\n",
+        "    elif len(setted_t) == 2:        # 2개가 같은 숫자면\n",
+        "        for i in setted_t:          # 중복 값이 제거된 리스트 setted_t에서\n",
+        "            t.remove(i)             # 하나씩 제거\n",
+        "        print(1000+t[0]*100)        # 같은숫자 * 100 + 1000\n",
+        "\n",
+        "    else:                           # 모두 다른 숫자면\n",
+        "        print(max(t)*100)           # 가장 큰 값 * 100\n",
         "\n",
         "if __name__ == '__main__':\n",
         "    main()"
@@ -2623,48 +2635,46 @@
         "id": "zBja6jSIMdOn"
       },
       "source": [
-        "n = int(input())\n",
+        "n = int(input())    # n번째 영화\n",
         "\n",
-        "a = 1\n",
-        "t = 2\n",
+        "a = 1               # 영화 제목에 들어 갈 숫자\n",
+        "t = 2               # t번째 영화(2부터 시작)\n",
         "\n",
-        "if n == 1:\n",
-        "  print(666)\n",
-        "else:\n",
-        "  h = 1\n",
-        "  while h != 0: # a= 6 t 7 => 6666\n",
+        "if n == 1:          # 첫번째 영화면\n",
+        "  print(666)        # 종말의 666 출력\n",
+        "\n",
+        "else:               # 그 이외의 영화이면\n",
+        "  h = 1             # 무한 반복 종료 조건\n",
+        "  while h != 0:     # 조건이 만족할 때 까지 반복\n",
         "    \n",
-        "    b = list(str(a))\n",
+        "    b = list(str(a))    # 영화에 들어갈 수 리스트 변환\n",
+        "    if b[-1] == '6':    # 마지막 문자열이 '6'이면\n",
         "\n",
-        "    if b[-1] == '6':\n",
-        "\n",
-        "      cnt = 0\n",
-        "      for i in range(len(b)-1,-1,-1):\n",
-        "        if b[i] == '6':\n",
-        "          cnt += 1\n",
-        "        else:\n",
-        "          break\n",
+        "      cnt = 0           # '6' 문자 카운트 변수 생성\n",
+        "      for i in range(len(b)-1,-1,-1):   # 리스트 뒤에서 부터 진행\n",
+        "        if b[i] == '6': # '6'이면\n",
+        "          cnt += 1      # 카운트 변수 + 1\n",
+        "        else:           # '6'이 아니면 \n",
+        "          break         # for문 종료\n",
         "      \n",
-        "      for i in range(10 ** cnt):\n",
+        "      for i in range(10 ** cnt):    # cnt 자리수 반복\n",
+        "        if t == n:                  # t와 n이 같으면\n",
+        "          j = str(i).rjust(cnt).replace(' ','0')    # cnt만큼 오른쪽에 '0' 추가 \n",
+        "          print(int(str(a)+'6'*(3-cnt)+j))          # \n",
+        "          h = 0         # 무한 반복 종료\n",
+        "          break         # for문 종료\n",
         "\n",
-        "        if t == n:\n",
-        "          j = str(i).rjust(cnt).replace(' ','0')\n",
-        "          print(int(str(a)+'6'*(3-cnt)+j))\n",
-        "          h = 0\n",
-        "          break\n",
+        "        t += 1          # t와 n이 같지 않으면 1 증가\n",
         "\n",
-        "        t += 1\n",
-        "      \n",
-        "      a += 1\n",
+        "      a += 1            # 영화에 들어갈 수 1증가\n",
         "\n",
-        "    else:\n",
-        "      \n",
-        "      if t == n:\n",
-        "        h = 0\n",
-        "        print(int(str(a)+'666'))\n",
+        "    else:               # 문자열이 '6'이 아니면\n",
+        "      if t == n:        # t와 n이 같으면\n",
+        "        h = 0           # 무한 반복 종료\n",
+        "        print(int(str(a)+'666'))    # 영화에 들어갈 숫자 출력\n",
         "        \n",
-        "      t += 1\n",
-        "      a += 1"
+        "      t += 1            # t + 1\n",
+        "      a += 1            # 영화에 들어갈 수 1증가"
       ],
       "execution_count": null,
       "outputs": []
@@ -9473,7 +9483,7 @@
         "id": "YmNhCb79bUUH"
       },
       "source": [
-        "### 단계 : ===========**"
+        "### 28단계 : 트리===========**"
       ]
     },
     {
@@ -9534,7 +9544,7 @@
         "id": "bGgOmPB9dgCq"
       },
       "source": [
-        "#### "
+        "####  1167번"
       ]
     },
     {
@@ -9546,7 +9556,43 @@
         "import sys\n",
         "input = sys.stdin.readline\n",
         "\n",
+        "def dfs(x,length):\n",
+        "    global visited_res, e, result, long\n",
+        "\n",
+        "    for i,j in e[x]:\n",
+        "        if visited_res[i]:\n",
+        "            continue\n",
+        "\n",
+        "        visited_res[i] = True\n",
+        "\n",
+        "        dfs(i,length+j)\n",
+        "        if result < length + j:\n",
+        "            result = length + j\n",
+        "            long = i\n",
+        "        \n",
+        "\n",
         "def main():\n",
+        "    global  visited_res, e, result, long\n",
+        "    v = int(input())\n",
+        "    e = [[] for _ in range(v+1)]\n",
+        "\n",
+        "    for _ in range(v):\n",
+        "        edge = list(map(int,input().split()))\n",
+        "        for i in range(1,len(edge)-1,2):\n",
+        "            e[edge[0]].append([edge[i],edge[i+1]])\n",
+        "\n",
+        "    long = -1\n",
+        "    result = 0\n",
+        "    visited_res = [False] * (v+1)\n",
+        "    visited_res[1] = True\n",
+        "    dfs(1,0)\n",
+        "\n",
+        "    result = 0\n",
+        "    visited_res = [False] * (v+1)\n",
+        "    visited_res[long]= True\n",
+        "    dfs(long,0)\n",
+        "\n",
+        "    print(result)\n",
         "\n",
         "if __name__ == '__main__':\n",
         "    main()"
@@ -9560,7 +9606,7 @@
         "id": "vN07MjatdgGk"
       },
       "source": [
-        "#### "
+        "####  1967번"
       ]
     },
     {
@@ -9570,9 +9616,45 @@
       },
       "source": [
         "import sys\n",
+        "sys.setrecursionlimit(int(1e9))\n",
         "input = sys.stdin.readline\n",
         "\n",
+        "def dfs(x,length):\n",
+        "    global visited_res, e, result, long\n",
+        "\n",
+        "    for i,j in e[x]:\n",
+        "        if visited_res[i]:\n",
+        "            continue\n",
+        "\n",
+        "        visited_res[i] = True\n",
+        "\n",
+        "        dfs(i,length+j)\n",
+        "        if result < length + j:\n",
+        "            result = length + j\n",
+        "            long = i\n",
+        "\n",
         "def main():\n",
+        "    global visited_res, e, result, long\n",
+        "    v = int(input())\n",
+        "    e = [[] for _ in range(v+1)]\n",
+        "\n",
+        "    for _ in range(v-1):\n",
+        "        edge = list(map(int,input().split()))\n",
+        "        e[edge[0]].append(edge[1:])\n",
+        "        e[edge[1]].append([edge[0],edge[2]])\n",
+        "\n",
+        "    long = -1\n",
+        "    result = 0\n",
+        "    visited_res = [False] * (v+1)\n",
+        "    visited_res[1] = True\n",
+        "    dfs(1,0)\n",
+        "\n",
+        "    result = 0\n",
+        "    visited_res = [False] * (v+1)\n",
+        "    visited_res[long]= True\n",
+        "    dfs(long,0)\n",
+        "\n",
+        "    print(result)\n",
         "\n",
         "if __name__ == '__main__':\n",
         "    main()"
@@ -9595,7 +9677,127 @@
         "id": "pnq6o0PWdgJq"
       },
       "source": [
-        ""
+        "import sys\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    main()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xxKtbBIdcPEH"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "J8hTuZA_cPEI"
+      },
+      "source": [
+        "import sys\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    main()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1yC6oWABcPYn"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mKCtlWgvcPYo"
+      },
+      "source": [
+        "import sys\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    main()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cZeUBBpOcPdv"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6-yM7M2ocPdw"
+      },
+      "source": [
+        "import sys\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    main()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xkIriFz6cHx4"
+      },
+      "source": [
+        "### 29단계 : ===========**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "x7YAB5ujcHx5"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5nIG-K6NcHx5"
+      },
+      "source": [
+        "import sys\n",
+        "sys.setrecursionlimit(int(1e9))\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    main()"
       ],
       "execution_count": null,
       "outputs": []
@@ -10881,7 +11083,6 @@
         "s = list(map(int, input().split()))\n",
         "\n",
         "s.sort(reverse= True)\n",
-        "\n",
         "\n",
         "def find(n,s):\n",
         "    for i in range(n,-1,-1):\n",
